# azestar

./: CMakeLists.txt  README.md  main.cpp
structures/: s_azestar.cpp  s_azestar.h  structure.h
